styles.css
@import url('https://fonts.googleapis.com/css?family=Baloo');

html {
    font-family: 'Baloo', cursive;
    background-color: #E5E4E2;
}
#header-container {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 500px;
}
#icons {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}
.middle {
    margin: 0px 7px;
}
.icon-link {
    color: black;
    position: relative;
}
.icon-link:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    background-color: #000;
    visibility: hidden;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transition: all 0.3s ease-in-out 0s;
    transition: all 0.3s ease-in-out 0s;
}
.icon-link:hover:before {
    visibility: visible;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}
#header-text {
    font-size: 125px;
}
#header-text-row {
    height: 150px;
    padding-right: 2px;
}
.down {
    text-align: center;
}
h1 {
    border-radius: 30px;
    font-size: 20px;
    border: 3px solid black;
    padding: 10px 20px;
    opacity: 0;
}
.fa-github, .fa-instagram, .fa-linkedin-square {
    opacity: 0;
}
.ghost {
    width: 65px;
    height: 65px;
    border-radius: 50%;
    background-color: black;
    display: inline-block;
    position: relative;
}
.eye {
    width: 5px;
    height: 10px;
    border-radius: 50%;
    background-color: white;
    position: absolute;
    -webkit-animation-name: blink;
    -webkit-animation-duration: 3s;
    -webkit-animation-iteration-count: infinite; 
    -webkit-transform-origin: 50%;
    animation-name: blink;
    animation-duration: 3;
    animation-iteration-count: infinite; 
    transform-origin: 50%;
}
.eye-l {
    top: 13px;
    left: 15px;
}
.eye-r {
    top: 13px;
    left: 27px;
}
@-webkit-keyframes blink { 
    0% { -webkit-transform: scaleX(1) scaleY(1); } 
    1% { -webkit-transform: scaleX(1.3) scaleY(0.1); } 
    2% { -webkit-transform: scaleX(1) scaleY(1); } 
    60% { -webkit-transform: scaleX(1) scaleY(1); } 
    61% { -webkit-transform: scaleX(1.3) scaleY(0.1); } 
    62% { -webkit-transform: scaleX(1) scaleY(1); } 
    100% { -webkit-transform: scaleX(1) scaleY(1); }
}
@keyframes blink { 
    0% { transform: scaleX(1) scaleY(1); } 
    1% { transform: scaleX(1.3) scaleY(0.1); } 
    2% { transform: scaleX(1) scaleY(1); } 
    60% { transform: scaleX(1) scaleY(1); } 
    61% { transform: scaleX(1.3) scaleY(0.1); }  
    62% { transform: scaleX(1) scaleY(1); } 
    100% { transform: scaleX(1) scaleY(1); }
}
footer {
    background-color: black;
    color: white;
    text-align: center;
}
* {
    box-sizing: border-box;
}
.row::after {
    content: "";
    clear: both;
    display: table;
}
[class*="col-"] {
    float: left;
}
/*for mobile*/
[class*="col-"] {
    width: 100%;
}
/*for desktop*/
@media only screen and (min-width: 600px) {
    .col-1 {width: 8.33%;}
    .col-2 {width: 16.66%;}
    .col-3 {width: 25%;}
    .col-4 {width: 33.33%;}
    .col-5 {width: 41.66%;}
    .col-6 {width: 50%;}
    .col-7 {width: 58.33%;}
    .col-8 {width: 66.66%;}
    .col-9 {width: 75%;}
    .col-10 {width: 83.33%;}
    .col-11 {width: 91.66%;}
    .col-12 {width: 100%;}
    #header-container {height: 625px;}
}

